# cervisia

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md
src/: SettingsDefault.toml  assistant_dialogs.rs  cervisia_utilities.rs  glade_builders.rs  input_handling.rs  main-window.glade  main.rs  password-change-dialog.glade  password-check-dialog.glade  quickmenu.glade  static_variables.rs
