[package]
name = "cervisia"
version = "6.0.0"
authors = ["nephtys <christopher.kaag@gmail.com>"]

[dependencies]
blrustix = { git = "https://github.com/n3phtys/rustix-bl" }
suffix = { git = "https://github.com/n3phtys/suffix-rs" }
closet = "0.2.2"
glib = "0.3.1"
rand = "0.3"
chrono = "0.4"
lazy_static = "0.2"
time = "0.1"

[dependencies.gtk]
version = "0.2.0"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["v3_10"]


[dependencies.gio]
version = "0.2.0"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["v2_40"]
