[package]
name = "cervisia"
version = "0.0.1"
authors = ["nephtys <christopher.kaag@gmail.com>"]



# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "gtk-rs based application for managing avh beer supply"

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
repository = "https://github.com/n3phtys/cervisia"


# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"




[dependencies]
rustix-bl = "0.3"
suffix-rs = "0.1"
closet = "0.2.2"
glib = "0.3.1"
rand = "0.3"
chrono = "0.4"
lazy_static = "0.2"
time = "0.1"
serde_json = "1.0"
config = "0.6"
lettre = "0.7"
notify = "4.0"
hyper = "0.11"
futures = "0.1"

[dependencies.gdk]
version = "0.6.0"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["v3_20"]

[dependencies.gtk]
version = "0.2.0"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["v3_20"]




[dependencies.gio]
version = "0.2.0"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["v2_40"]

[dependencies.gio-sys]
version = "0.4.0"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["v2_40"]
